Add JVM configuration to avoid PermGen OOM problem